RESOLVED FIXED 100203
Regression(r132303) Broke debug build when SHADOW_DOM is enabled but STYLE_SCOPED is disabled
https://bugs.webkit.org/show_bug.cgi?id=100203
Summary Regression(r132303) Broke debug build when SHADOW_DOM is enabled but STYLE_SC...
Chris Dumez
Reported 2012-10-23 23:00:09 PDT
r132303 broke debug build when SHADOW_DOM is enabled but STYLE_SCOPED is disabled: In file included from /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/css/CSSCalculationValue.cpp:36:0: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/css/StyleResolver.h: In member function ‘WebCore::StyleScopeResolver* WebCore::StyleResolver::ensureScopeResolver()’: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/css/StyleResolver.h:178:58: error: ‘styleScopedEnabled’ is not a member of ‘WebCore::RuntimeEnabledFeatures’ make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/css/CSSCalculationValue.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs....
Attachments
Patch (1.53 KB, patch)
2012-10-23 23:02 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-10-23 23:02:39 PDT
Created attachment 170321 [details] Patch Could someone please cq+?
Ryuan Choi
Comment 2 2012-10-23 23:16:13 PDT
Hajime Morrita
Comment 3 2012-10-24 01:15:32 PDT
Oops. Thanks for fixing this.
Note You need to log in before you can comment on or make changes to this bug.