Regression(r132303) Broke debug build when SHADOW_DOM is enabled but STYLE_SCOPED is disabled https://bugs.webkit.org/show_bug.cgi?id=100203

Unreviewed Build fix.

Fix compilation error in StyleResolver.h when SHADOW_DOM flag is
set and STYLE_SCOPED is not.

No new tests, no behavior change.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-23

* css/StyleResolver.h:
(WebCore::StyleResolver::ensureScopeResolver):

Canonical link: https://commits.webkit.org/118227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132312 268f45cc-cd09-0410-ab3c-d52691b4dbfc